<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Conferences</string>
    <string name="action_settings">Settings</string>
    <string name="gestconf">Conference Management</string>
    <string name="default_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="textview">TextView</string>
    <string name="imageViewDescription">TO DO</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="startdate">Start date : </string>
    <string name="enddate">End date : </string>
    <string name="location">Location : </string>
    <string name="myconference">My Conferences</string>
    <string name="program">Program</string>
    <string name="valide">OK</string>
    <string name="admin">Administrator mode</string>
    <string name="user">User mode</string>
    <string name="calendar">Calendar</string>
    <string name="options">Options</string>
    <string name="nearconference">Nearby conferences</string> <!-- find a better name -->
    <string name="newconference">New Conference</string>
    <string name="conferencename">Conference name</string>
    <string name="conferenceLocation">Conference location</string>
    <string name="conferenceStartDate">Conference starts at</string>
    <string name="conferenceEndDate">Conference ends at</string>
    <string name="conferenceDescription">Conference description</string>
    <string name="addPresentation">Add Presentation</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="french">French</string>

    <!-- Buttons -->
    <string name="addToCalendar">Add to Calendar</string>

    <!-- Months -->
    <string name="janvier">January</string>
    <string name="Fevrier">February</string>
    <string name="Mars">March</string>
    <string name="Avril">April</string>
    <string name="Mai">May</string>
    <string name="Juin">June</string>
    <string name="Juillet">July</string>
    <string name="Aout">August</string>
    <string name="Septembre">September</string>
    <string name="Octobre">October</string>
    <string name="Novembre">November</string>
    <string name="Decembre">December</string>

    <!-- Application Strings -->
    <string name="notimplemented">This feature is not available on this version</string>
    <string name="confcreated">Conference created successfully</string>
    <string name="fileadded">File added to My Conferences</string>

</resources>