<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvPresentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/textview"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Description RelativeLayout -->

    <RelativeLayout
        android:id="@+id/rlDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvPresentation" >

        <TextView
            android:id="@+id/tvPresDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner1"
            android:text="@string/default_lorem" />

        <!-- Other contents RelativeLayout -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPresDesc"
            android:background="@drawable/rounded_corner2" >

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="30dp"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tvAuthorval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvAuthor"
                android:layout_alignBottom="@+id/tvAuthor"
                android:layout_centerHorizontal="true"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/tvDatedeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvAuthor"
                android:layout_marginTop="44dp"
                android:text="@string/startdate" />

            <TextView
                android:id="@+id/tvDatedebval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvDatedeb"
                android:layout_alignBottom="@+id/tvDatedeb"
                android:layout_alignLeft="@+id/tvAuthorval"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/tvDatefin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvDatedebval"
                android:layout_marginTop="50dp"
                android:text="@string/enddate" />

            <TextView
                android:id="@+id/tvDatefinval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvDatefin"
                android:layout_alignBottom="@+id/tvDatefin"
                android:layout_alignRight="@+id/tvDatedebval"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/tvLieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvDatefin"
                android:layout_marginTop="58dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tvLieuval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvLieu"
                android:layout_alignBottom="@+id/tvLieu"
                android:layout_alignLeft="@+id/tvDatefinval"
                android:text="@string/textview" />

            <Button
                android:id="@+id/addToCalendar"
                style="@style/CustomStyleButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/addToCalendar" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>